# OpenCVBaseProject

./: CMakeLists.txt
src/: CMakeLists.txt
